--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
       </p>
       <div class="buttons">
         <!-- Replace # with your real links -->
-        <a class="btn" href="#" aria-label="View my resume">📄 Resume</a>
-        <a class="btn" href="#" aria-label="Visit my GitHub">💻 GitHub</a>
-        <a class="btn" href="mailto:you@example.com" aria-label="Send me an email">✉️ Email</a>
-        <a class="btn" href="#" aria-label="Connect on LinkedIn">🔗 LinkedIn</a>
+        <a class="btn" href="https://github.com/MediculousCodes/mediculouscodes.github.io/blob/main/Jeremy%20Johnsonwall%20Resume.pdf" aria-label="View my resume">📄 Resume</a>
+        <a class="btn" href="https://github.com/MediculousCodes" aria-label="Visit my GitHub">💻 GitHub</a>
+        <a class="btn" href="mailto:jeremy@johnsonwall.com" aria-label="Send me an email">✉️ Email</a>
+        <a class="btn" href="https://www.linkedin.com/in/jeremyjohnsonwall" aria-label="Connect on LinkedIn">🔗 LinkedIn</a>
       </div>
     </header>
 
@@ -157,7 +157,7 @@
         <ul>
           <li><span class="pill">Location</span> — South Carolina, USA</li>
           <li><span class="pill">Focus</span> — Web, Data, Cloud</li>
-          <li><span class="pill">School</span> — Clemson University 🐅</li>
+          <li><span class="pill">School</span> — Clemson University</li>
           <li><span class="pill">Hobbies</span> — Rowing, music, hiking</li>
         </ul>
       </div>
@@ -166,14 +166,13 @@
     <section class="card">
       <h2>Projects</h2>
       <ul>
-        <li><strong>Project One</strong> — Short description of something you built.</li>
-        <li><strong>Project Two</strong> — Another quick highlight or link.</li>
-        <li><strong>Project Three</strong> — Keep it brief and skimmable.</li>
+        <li><strong>Palmetto Chatbot</strong> — Customer Support Chatbot for the Clemson Palmetto Supercomputer.</li>
+        <li><strong>TigerTix</strong> — Event Management WebApp for CPSC 3720.</li>
       </ul>
     </section>
 
     <footer>
-      © <span id="y"></span> Jeremy Johnsonwall · Built with ❤️ and GitHub Pages
+      © <span id="y"></span> Jeremy Johnsonwall
     </footer>
   </main>
 
@@ -183,4 +182,5 @@
   </script>
 </body>
 </html>
+
 
