--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
   <main class="wrap">
     <!-- HERO -->
     <header class="hero" role="banner">
-      <span class="eyebrow" aria-label="current role">New Graduate • Computer Science</span>
+      <span class="eyebrow" aria-label="current role">MS Computer Science • Clemson University</span>
       <h1>Jeremy Johnsonwall</h1>
-      <p class="tagline">Software • Data • Cloud. I build reliable, human‑centered systems and ship practical projects end‑to‑end.</p>
+      <p class="tagline">Software • Data • Cloud. Graduate TA mentoring capstone teams for industry partners; I build reliable, human‑centered systems and ship practical projects end‑to‑end.</p>
       <div class="buttons" role="navigation" aria-label="primary">
         <a class="btn" href="mailto:jeremy@johnsonwall.com" aria-label="Email Jeremy">✉️ Email</a>
         <a class="btn" href="https://github.com/MediculousCodes" aria-label="GitHub profile">💻 GitHub</a>
@@ -183,26 +183,14 @@
 
       <div class="item">
         <div>
-          <div class="role">ServiceNow Administrator Intern <span class="org">— LPL Financial</span></div>
+          <div class="role">Graduate Teaching Assistant — Strategic Industry Partnerships <span class="org">— Clemson University, School of Computing</span></div>
           <ul>
-            <li>Built and enhanced Service Catalog items, workflows, and dashboards; supported Yokohama upgrade analysis.</li>
-            <li>Generated reports for Problem Management and University Recruitment; earned ServiceNow CSA credential.</li>
+            <li>Mentor high‑performing student teams in the Capstone Program under Professor Carrie Russell (Director of Strategic Industry Partnerships).</li>
+            <li>Guide semester‑long client projects with partners including <strong>TD SYNNEX</strong>, <strong>NVIDIA</strong>, and <strong>Capgemini</strong>.</li>
+            <li>Coach teams on design reviews, stakeholder communication, agile delivery, and final presentations.</li>
           </ul>
         </div>
-        <div class="date">Summer</div>
-      </div>
-
-      <div class="item">
-        <div>
-          <div class="role">IT Support / Developer <span class="org">— Clemson CCIT</span></div>
-          <ul>
-            <li>Assisted campus operations across ServiceNow, automation scripts, and user support in a fast‑paced environment.</li>
-            <li>Collaborated with student teams and staff on tooling that improved workflow clarity and response times.</li>
-          </ul>
-        </div>
-        <div class="date">Multi‑year</div>
-      </div>
-    </section>
+        <div cla
 
     <!-- PROJECTS -->
     <section class="card" aria-label="projects">
