--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
   <main class="wrap">
     <!-- HERO -->
     <header class="hero" role="banner">
-      <span class="eyebrow" aria-label="current role">New Graduate • Computer Science</span>
+      <span class="eyebrow" aria-label="current role">Masters Student • Computer Science</span>
       <h1>Jeremy Johnsonwall</h1>
-      <p class="tagline">Software • Data • Cloud. I build reliable, human‑centered systems and ship practical projects end‑to‑end.</p>
+      <p class="tagline">Machine Learning • AI. • Data Science • AWS • ServiceNow</p>
       <div class="buttons" role="navigation" aria-label="primary">
         <a class="btn" href="mailto:jeremy@johnsonwall.com" aria-label="Email Jeremy">✉️ Email</a>
         <a class="btn" href="https://github.com/MediculousCodes" aria-label="GitHub profile">💻 GitHub</a>
@@ -135,13 +135,13 @@
           <h2>Profile</h2>
           <span class="subtle">South Carolina, USA</span>
         </div>
-        <p>I’m a Clemson University computer science graduate focused on building useful software with clean interfaces and dependable backends. My interests span web apps, data workflows, and cloud infrastructure. I like small, shipped wins and clear, maintainable code.</p>
+        <p>I’m a Clemson University computer science graduate student focused on learning advanced machine learning techniques to enhance cloud services. I enjoy mentoring students and collaborating with them to develop the best product for their needs.</p>
         <div class="skills" aria-label="core strengths">
-          <span class="pill">Full‑stack Web</span>
-          <span class="pill">APIs</span>
-          <span class="pill">Data Pipelines</span>
-          <span class="pill">Cloud (AWS/Azure)</span>
-          <span class="pill">DevOps & Docker</span>
+          <span class="pill">Machine Learning</span>
+          <span class="pill">Artificial Intelligence</span>
+          <span class="pill">Data Science</span>
+          <span class="pill">AWS Cloud</span>
+          <span class="pill">ServiceNow</span>
         </div>
       </article>
 
@@ -301,3 +301,4 @@
   </script>
 </body>
 </html>
+
